src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>CPS - Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>School Strategy</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Nurture further</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified %2F Closed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ASA_Symposium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead_ASA Symposium</description>
        <label>ASA Symposium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Languages__c</fullName>
        <label>Additional Languages</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beyond_the_Students__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beyond the Students</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BirthDate_Text__c</fullName>
        <label>BirthDate Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <description>Returns the Birth Year from Birth Date Field</description>
        <formula>TEXT(YEAR( BirthDate__c ))</formula>
        <label>Birthyear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPS Advisor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>CPS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPS_Lead_Company_Name__c</fullName>
        <description>Used for generating a generic Company name for Lead - Field not on page layouts or reported . Used in workflow.</description>
        <formula>LastName+&apos;, &apos;+FirstName+&apos;(&apos;+Birth_Year__c+&apos;)&apos;+&apos; Account&apos;</formula>
        <label>CPS Lead Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reach</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>CU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Stalled__c</fullName>
        <formula>IF(LastActivityDate &gt; DATEVALUE(LastModifiedDate), today() - LastActivityDate, today() - DATEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Stalled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exisiting_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Check if there is an existing account here</description>
        <label>Exisiting Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Areas_or_Impacted_Schools__c</fullName>
        <label>Geographic Areas or Impacted Schools</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_an_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have an Appointment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <description>School Name</description>
        <label>Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Intake_DateTime__c</fullName>
        <label>Intake DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intake_Location__c</fullName>
        <label>Intake Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CPS_Intake_location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_your_first_visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this your first visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Convert_Support__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Convert Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_E_Clipse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mapped to eclipse on Contact page, client would like to receive eclips</description>
        <label>E-Clipse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_LendServ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead_the client would like to recieve the Lend Serv correspondance</description>
        <label>LendServ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learned_About_Program__c</fullName>
        <label>Learned About Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended a Workshop</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Info Session</fullName>
                </value>
                <value>
                    <fullName>Mass Grant Program</fullName>
                </value>
                <value>
                    <fullName>Online/social media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referred by Teacher / Counselor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meet_with_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meet with Advisor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Size__c</fullName>
        <label>Membership Size</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <label>Nick Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type_Industry__c</fullName>
        <label>Organization Type/Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Association / Union</fullName>
                </value>
                <value>
                    <fullName>For-Profit</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>State / Government</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Comments_Notes__c</fullName>
        <label>Other Comments/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Learned_about_program__c</fullName>
        <label>Other: Learned about program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Organization_Type__c</fullName>
        <inlineHelpText>Only fill out if &apos;Other&apos; is selected in Organization Type field.</inlineHelpText>
        <label>Other Organization Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pardot_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field captures the Opt Out request from a Pardot campaign.</description>
        <inlineHelpText>This field captures the Opt Out request from a Pardot campaign.</inlineHelpText>
        <label>Pardot Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Type__c</fullName>
        <label>Preferred Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_language__c</fullName>
        <label>Preferred language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French-Creole</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit_EOC_TS__c</fullName>
        <description>For the EOC and TS Program.  What is the purpose of the visit?</description>
        <inlineHelpText>For the EOC and TS Program.  What is the purpose of the visit?</inlineHelpText>
        <label>Purpose of Visit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>   Education info</fullName>
                </value>
                <value>
                    <fullName>   Admission application assistance</fullName>
                </value>
                <value>
                    <fullName>   FA application assistance</fullName>
                </value>
                <value>
                    <fullName>   Scholarship </fullName>
                </value>
                <value>
                    <fullName>   Loan Assistance </fullName>
                </value>
                <value>
                    <fullName>   Fee Waiver</fullName>
                </value>
                <value>
                    <fullName>   Use resources </fullName>
                </value>
                <value>
                    <fullName>   Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID_Acc__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>Record Type ID - Acc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID_Opp__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>Record Type ID - Opp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Guidance_Counselor__c</fullName>
        <label>School Guidance Counselor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schools_Worried__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schools Worried</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_1_Trillion_Problem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The $1 Trillion Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Class_of_2013__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Class of 2013</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_interest__c</fullName>
        <label>Type of interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Rate</fullName>
                </value>
                <value>
                    <fullName>MM101</fullName>
                </value>
                <value>
                    <fullName>FinLit</fullName>
                </value>
                <value>
                    <fullName>EDM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualify_Close_Reason__c</fullName>
        <description>Have user provide the reason why this Lead is being Unqualified or Closed.</description>
        <inlineHelpText>Please provide the reason why this Lead is being Unqualified or Closed.</inlineHelpText>
        <label>Unqualify/Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Limited enrollment/opportunity</fullName>
                </value>
                <value>
                    <fullName>Student inquiry</fullName>
                </value>
                <value>
                    <fullName>In contract with competitor</fullName>
                </value>
                <value>
                    <fullName>Looking for immediate CDR reduction product</fullName>
                </value>
                <value>
                    <fullName>Already in discussions with Prospect</fullName>
                </value>
                <value>
                    <fullName>Lead is not decision maker</fullName>
                </value>
                <value>
                    <fullName>Currently has a solution (homegrown/free resource)</fullName>
                </value>
                <value>
                    <fullName>For-Profit entity</fullName>
                </value>
                <value>
                    <fullName>Unable/Unwilling to include decision maker</fullName>
                </value>
                <value>
                    <fullName>No Loan Borrowers</fullName>
                </value>
                <value>
                    <fullName>Not interested at this time</fullName>
                </value>
                <value>
                    <fullName>Retired/No Longer at Institution</fullName>
                </value>
                <value>
                    <fullName>Return to Marketing - Nurture Further</fullName>
                </value>
                <value>
                    <fullName>Cold Lead</fullName>
                </value>
                <value>
                    <fullName>Current Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_to_ASA__c</fullName>
        <label>Value to ASA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Was_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Hidden field for marking the converted account as having originated from a lead conversion.</description>
        <inlineHelpText>Hidden field for marking the converted account as having originated from a lead conversion.</inlineHelpText>
        <label>Was Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X10_Facts_You_Need_to_Know_About_Studen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>10 Facts You Need to Know About Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3_Things_Schools_Can_Do_This_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3 Things Schools Can Do This Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Content_University_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Content University Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Invitation__c</fullName>
        <label>Last Survey Invitation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Response__c</fullName>
        <label>Last Survey Response</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Business_Development</value>
        </filters>
        <label>All Open/Unread Leads</label>
        <sharedTo>
            <group>BD_Management</group>
            <role>TopLevel</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Union_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Unqualify_Close_Reason__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Strategic_Partnership</value>
        </filters>
        <label>Credit Union--Pardot Leads</label>
    </listViews>
    <listViews>
        <fullName>Engagement_Partner_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Cole,Fortier</value>
        </filters>
        <label>Engagement Partner Leads</label>
    </listViews>
    <listViews>
        <fullName>Intake_EOC_Boston</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Intake_DateTime__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>Purpose_of_Visit__c</columns>
        <columns>Is_this_your_first_visit__c</columns>
        <columns>Meet_with_Advisor__c</columns>
        <columns>Have_an_Appointment__c</columns>
        <columns>Preferred_language__c</columns>
        <columns>CPS_Advisor__c</columns>
        <columns>Comment__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>BirthDate__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Open</value>
        </filters>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>EOC Boston</value>
        </filters>
        <label>Intake - EOC Boston</label>
        <queue>EOC_Boston</queue>
    </listViews>
    <listViews>
        <fullName>Intake_EOC_Brockton</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Intake_DateTime__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Is_this_your_first_visit__c</columns>
        <columns>Have_an_Appointment__c</columns>
        <columns>Meet_with_Advisor__c</columns>
        <columns>Preferred_language__c</columns>
        <columns>Purpose_of_Visit_EOC_TS__c</columns>
        <columns>Purpose_of_Visit__c</columns>
        <columns>Comment__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CPS_Advisor__c</columns>
        <columns>BirthDate__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Open</value>
        </filters>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>EOC Brockton</value>
        </filters>
        <label>Intake - EOC Brockton</label>
        <queue>EOC_Brockton</queue>
    </listViews>
    <listViews>
        <fullName>Intake_TS_Boston</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Intake_DateTime__c</columns>
        <columns>FULL_NAME</columns>
        <columns>BirthDate__c</columns>
        <columns>Is_this_your_first_visit__c</columns>
        <columns>Purpose_of_Visit_EOC_TS__c</columns>
        <columns>Purpose_of_Visit__c</columns>
        <columns>School_Guidance_Counselor__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Open</value>
        </filters>
        <filters>
            <field>Intake_Location__c</field>
            <operation>equals</operation>
            <value>TS Boston</value>
        </filters>
        <label>Intake - TS Boston</label>
        <queue>TS_Boston</queue>
    </listViews>
</CustomObject>